--- a/popup.html
+++ b/popup.html
@@ -14,22 +14,30 @@
             padding: 0;
         }
 
+        html {
+            background: transparent;
+        }
+
+        /* Soft Card Container - Modern floating card aesthetic */
         body {
             font-family: 'Nunito', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: white;
+            background: #ffffff;
             color: #000;
-            width: 300px;
+            width: 320px;
             min-height: 180px;
-            overflow-x: hidden;
+            border-radius: 16px; /* Soft rounded corners */
+            overflow: hidden; /* Critical for rounded corners */
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+                        0 4px 6px -2px rgba(0, 0, 0, 0.05); /* Multi-layered shadow */
             font-size: 12px;
             line-height: 1.4;
         }
 
-        /* Header - Compact and sharp */
+        /* Header - Flush with rounded top */
         .header {
             background: #fbe51f;
-            padding: 12px 16px;
-            border-bottom: 2px solid #000;
+            padding: 14px 16px;
+            /* Top corners rounded automatically from body */
         }
 
         .header h1 {
@@ -41,7 +49,7 @@
             letter-spacing: 0.02em;
         }
 
-        /* Content - Tighter spacing */
+        /* Content - Spacious padding */
         .content {
             padding: 16px;
         }
@@ -54,29 +62,30 @@
             margin-bottom: 0;
         }
 
-        /* Section Headers - Subtle with border */
+        /* Section Headers - Subtle */
         .section-header {
             font-size: 10px;
             color: #999;
             text-transform: uppercase;
             letter-spacing: 0.1em;
-            margin-bottom: 8px;
-            border-bottom: 1px solid #eee;
-            padding-bottom: 4px;
+            margin-bottom: 12px;
             font-weight: 600;
         }
 
-        /* Instructions - Timeline/Step Pattern */
+        /* Instructions - Generous spacing, soft pills */
         .instructions {
             margin-top: 8px;
         }
 
         .step-row {
-            display: grid;
-            grid-template-columns: 24px 1fr;
-            gap: 8px;
-            margin-bottom: 10px;
+            display: flex;
             align-items: center;
+            gap: 10px;
+            padding: 10px 12px;
+            margin-bottom: 8px;
+            background: #f8f8f8; /* Soft pill background */
+            border-radius: 12px; /* Rounded pill */
+            border: 1px solid #f0f0f0;
         }
 
         .step-row:last-child {
@@ -84,8 +93,8 @@
         }
 
         .step-number {
-            width: 18px;
-            height: 18px;
+            width: 20px;
+            height: 20px;
             background: #fbe51f;
             border: 1px solid #190f0b;
             border-radius: 50%;
@@ -95,12 +104,14 @@
             font-size: 11px;
             font-weight: 700;
             color: #190f0b;
+            flex-shrink: 0;
         }
 
         .step-text {
             font-size: 12px;
-            line-height: 1.2;
+            line-height: 1.3;
             color: #333;
+            flex: 1;
         }
 
         .step-text a {
@@ -117,24 +128,26 @@
             font-weight: 600;
         }
 
-        /* Cache Section - Grouped with background */
-        .data-box {
-            background: #f5f5f5;
-            padding: 12px;
-            border-radius: 4px;
-            margin: 10px 0;
+        /* Data Group - Soft rounded container */
+        .data-group {
+            margin: 0;
+            padding: 16px;
+            background: #fcfcfc; /* Off-white */
+            border-radius: 12px; /* Internal rounding */
+            border: 1px solid #f0f0f0; /* Soft grey border */
         }
 
         .data-row {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 6px 0;
-            border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+            padding: 8px 0;
+            border-bottom: 1px solid rgba(0, 0, 0, 0.03); /* Subtle divider */
         }
 
         .data-row:last-child {
             border-bottom: none;
+            padding-bottom: 12px; /* Extra space before button */
         }
 
         .data-label {
@@ -154,23 +167,24 @@
         .data-badge {
             background: #fbe51f;
             color: #190f0b;
-            padding: 3px 8px;
-            border-radius: 2px;
+            padding: 4px 10px;
+            border-radius: 6px; /* Soft rounded, not pill */
             font-size: 11px;
             font-weight: 700;
         }
 
-        /* Professional Feedback Button */
-        .btn-action {
+        /* Pill-shaped Modern Button */
+        .btn-modern {
             width: 100%;
-            height: 32px;
-            margin-top: 0; /* No margin - part of data-box */
+            height: 40px; /* Taller for better touch target */
+            margin-top: 4px;
             padding: 0;
             font-size: 11px;
-            font-weight: 800;
+            font-weight: 700;
             text-transform: uppercase;
             letter-spacing: 0.05em;
             border: none;
+            border-radius: 99px; /* Full pill shape */
             background: #000;
             color: #fff;
             cursor: pointer;
@@ -181,47 +195,53 @@
             gap: 6px;
         }
 
-        .btn-action:hover {
+        .btn-modern:hover {
             background: #333;
+            transform: translateY(-1px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
         }
 
-        .btn-action:active {
-            transform: translateY(1px);
+        .btn-modern:active {
+            transform: scale(0.98); /* Soft tactile press */
         }
 
-        /* Success State - Green for 2 seconds */
-        .btn-action.success {
+        /* Success State - Green pill */
+        .btn-modern.success {
             background: #4CAF50;
             cursor: default;
         }
 
-        .btn-action.success:hover {
+        .btn-modern.success:hover {
             background: #4CAF50;
+            transform: none;
+            box-shadow: none;
         }
 
-        /* Error State - Red flash */
-        .btn-action.error {
+        /* Error State - Red pill */
+        .btn-modern.error {
             background: #D32F2F;
             cursor: default;
         }
 
-        .btn-action.error:hover {
+        .btn-modern.error:hover {
             background: #D32F2F;
+            transform: none;
+            box-shadow: none;
         }
 
-        .btn-action svg {
+        .btn-modern svg {
             width: 14px;
             height: 14px;
             stroke-width: 2;
         }
 
-        /* Version footer - minimal */
+        /* Version footer - soft minimal */
         .version {
             text-align: center;
-            padding: 10px;
+            padding: 12px;
             font-size: 9px;
             color: #999;
-            border-top: 1px solid #f0f0f0;
+            background: #fafafa;
             font-weight: 400;
             letter-spacing: 0.05em;
         }
@@ -256,7 +276,7 @@
         <div class="section">
             <div class="section-header">Geocoding-Cache</div>
 
-            <div class="data-box">
+            <div class="data-group">
                 <div class="data-row">
                     <span class="data-label">Gespeicherte Adressen</span>
                     <span class="data-value" id="cacheCount">-</span>
@@ -272,7 +292,7 @@
                     <span class="data-badge">30 Tage</span>
                 </div>
 
-                <button class="btn-action" id="clearCacheBtn">
+                <button class="btn-modern" id="clearCacheBtn">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
                         <path d="M3 6h18M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
                     </svg>
